# ML-from-Scratch

./: .gitignore  README.md  pyproject.toml
ml/: __init__.py
ml/preprocessing/: __init__.py  scalers.py
ml/supervised/: __init__.py  decision_tree.py  gaussian_discriminant_analysis.py  linear_regression.py  logistic_regression.py  naive_bayes.py  perceptron.py  softmax_regression.py
ml/unsupervised/: __init__.py  collaborative_filtering.py  factor_analysis.py  gmm.py  ica.py  kmeans.py  pca.py
