[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ml"
version = "0.1.0"
description = "Machine learning algorithms implemented from scratch with NumPy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*"]
